--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "reselect": "^4.1.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
