--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@types/classnames": "^2.3.1",
     "@types/react-icons": "^3.0.0",
+    "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
+    "redux-saga": "^1.1.3",
     "reselect": "^4.1.6"
   },
   "devDependencies": {
